[tool.poetry]
name = "cacheables"
version = "0.2.0"
description = ""
authors = ["Thom Lane <thom.e.lane@gmail.com>"]
readme = "README.md"
repository = "https://github.com/thomelane/cacheables"

[tool.poetry.scripts]
cacheables = "cacheables.cli:cacheables"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
click = "^8.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
