[tool.poetry]
name = "cacheables"
version = "0.3.2"
description = ""
authors = ["Thom Lane <thom.e.lane@gmail.com>"]
readme = "README.md"
repository = "https://github.com/thomelane/cacheables"

[tool.poetry.scripts]
cacheables = "cacheables.cli:cacheables"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.0"
click = "^8.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.284"
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
sphinx = "^7.2.4"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    ]

[tool.taskipy.tasks]
test = "pytest --cov=cacheables --cov-report=xml tests"
format = "black cacheables tests"
lint = "ruff check cacheables tests"

[tool.ruff]
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403", "F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
