[project]
name = "cacheables"
version = "0.3.2"
description = ""
authors = [
    { name = "Thom Lane", email = "thom..e.lane@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4"
repository = "https://github.com/thomelane/cacheables"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.1.6",
    "filelock>=3.17.0",
    "loguru>=0.7.0",
    "pytest-asyncio>=0.23.8",
]

[project.scripts]
cacheables = "cacheables.cli:cacheables"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    ]

[tool.taskipy.tasks]
test = "pytest --cov=cacheables --cov-report=xml tests"
format = "ruff check --fix && ruff format"
lint = "ruff check src tests"

[tool.ruff]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F401"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.284",
    "sphinx>=7.2.4",
    "taskipy>=1.12.0",
]
